# parallel_stable_marriage_constraint

./: .gitignore  README.md  idee per CUDA.txt  notes.txt
C_mockup/: constraints_comparator_tester.cu  cuda_constraint.cu  cuda_costraint.cu  cuda_mockup.cu  domain_functions.c  main.c  serial_constraint.c  serial_constraint.cpp  serial_mockup.c  serial_mockup.cpp  stable_marriage_constraint.c
C_mockup/tests/: all_empty_domains_n5.txt  input_n10.txt  input_n33_partial.txt  input_n3_partial.txt  input_n3_partial_bis.txt  input_n4_doms.txt  input_n4_partial.txt  input_n5_partial.txt  no_sol_n4.txt  no_sol_n5.txt  no_sol_n5_bis.txt  paper87_doms.txt  paper87_doms_2.txt
C_mockup/utils/: cuda_domain_functions.cu  io.c  (+2 more)
C_other/: old_cuda_costraint.cu
SM_alg/: algos_comparator_tester.cu  benchmark.py  cmp_algs.out  cuda_SM.cu
benchmark/: benchmark.py
constraint_tester/: comparator.py
fzn-minicpp/: CMakeLists.txt  HowTo_nuovo_constraint.txt  README.md  fzn_cli_helper.cpp  fzn_cli_helper.h  fzn_constraints_helper.cpp  fzn_constraints_helper.h  fzn_output_helper.cpp  fzn_output_helper.h  fzn_search_helper.cpp  fzn_search_helper.h  fzn_statistics_helper.cpp  fzn_statistics_helper.h  fzn_variables_helper.cpp  fzn_variables_helper.h  main.cpp  org.minicpp.minicpp.msc
fzn-minicpp/cxxopts/: cxxopts.hpp
fzn-minicpp/fzn_constraints/: bool_array.cpp  bool_array.hpp  bool_bin.cpp  bool_bin.hpp  bool_misc.cpp  bool_misc.hpp  int_array.cpp  int_array.hpp  int_bin.cpp  int_bin.hpp  int_lin.cpp  int_lin.hpp  int_misc.cpp  int_misc.hpp  int_tern.cpp  int_tern.hpp
fzn-minicpp/global_constraints/: cumulative.cpp  cumulative.hpp  smart_table.cpp  smart_table.hpp  stable_matching.cpp  stable_matching.hpp  table.cpp  table.hpp
fzn-minicpp/gpu_constriants/: cumulative.cu  cumulative.cuh  error_handler.cuh  stable_matching.cu  stable_matching.cuh
fzn-minicpp/libfca/: Array.hpp  README.md  Slice.hpp  Timer.cpp  Timer.hpp  Types.hpp  Utils.hpp  Vector.hpp
fzn-minicpp/libfzn/: CMakeLists.txt  Demo.cpp  LICENSE.txt  Model.h  Parser.cpp  Parser.h  Printer.cpp  Printer.h  README.md  Types.h  Utils.h  fzn.peg
fzn-minicpp/libfzn/tests/: flexible-jobshop.fzn  gbac.fzn  nonogram.fzn  rcpsp-wet.fzn
fzn-minicpp/libgpu/: LinearAllocator.cuh  Memory.cuh  README.md  Utils.cuh
fzn-minicpp/libminicpp/: .gitignore  CMakeLists.txt  Demo.cpp  README.md  RuntimeMonitor.cpp  RuntimeMonitor.hpp  acstr.cpp  acstr.hpp  allInterval.hpp  avar.hpp  bitsUtils.h  bitset.cpp  bitset.hpp  constraint.cpp  constraint.hpp  domain.cpp  domain.hpp  fail.cpp  fail.hpp  handle.hpp  hashtable.hpp  heap.hpp  intvar.cpp  intvar.hpp  lex.cpp  lex.hpp  mallocWatch.cpp  mallocWatch.hpp  matching.cpp  matching.hpp  mathUtils.h  matrix.hpp  queue.hpp  range.hpp  regular.cpp  regular.hpp  search.cpp  search.hpp  solver.cpp  solver.hpp  (+13 more)
fzn-minicpp/minizinc/: fzn_all_different_int.mzn  fzn_circuit.mzn  fzn_cumulative.mzn  fzn_table_int.mzn  minicpp.mzn  redefinitions-2.0.mzn  redefinitions.mzn  stable_matching.mzn
fzn-minicpp/tests/: TestSmartTable.mzn  TestStableMatching.mzn  TestTable.mzn
fzn-minicpp/tests/stableMatchingTests/: 1solution.mzn  2solutions.mzn  3solutions.mzn  all_empty_domains_n5.mzn  input_n3_partial.mzn  input_n3_partial_bis.mzn  input_n4.mzn  input_n4_doms.mzn  input_n4_partial.mzn  input_n5_1.mzn  input_n5_2.mzn  input_n5_3.mzn  input_n5_partial.mzn  no_sol_n5_bis.mzn  paper87.mzn  paper87_doms.mzn  paper87_doms_2.mzn
python_testing/: README.txt  constraint_functions.py  domain_functions.py  input.txt  main.py  output.txt
single_propagation_benchmark/: propagation_benchmark.py  sp_benchmark.py
(+6 files in other folders)
